[metadata]
name = flowlogd
version = 1.0.0
summary = JioCloud VPC FlowLog
description-file =
    README.md
license = Apache License, Version 2.0
author = JioCloudVPC
author-email = JioCloudVPC@ril.com
classifier =
    Environment :: JioCloud
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[files]
packages =
    flowlogd
data_files =
    /etc/flowlogd =
        flowlogd/vpc_flow_logs.cfg

[global]
setup-hooks =
    pbr.hooks.setup_hook

